# workflows

./: pyproject.toml  requirements.txt
config/: config.yaml
data/: input.json
src/: main.py  s3.py
src/client/: __init__.py  client.py  dummy_client.py  helpers.py  jobs.py
